Icon spacing fix

--- a/style.css
+++ b/style.css
@@ -851,7 +851,7 @@ box-shadow: 0 -1px 0 rgba(255,255,255,0.07), inset 0 1px 0 rgba(0,0,0,0.2), inse
 
 .post-comments { background: rgba(0,0,0,0.7); font-size: 12px; line-height: 20px; color: rgba(255,255,255,0.8); display: block; position: absolute; bottom: 14px; left: 14px; border-radius: 30px; }
 .post-comments > span { display: block; position: relative; padding: 2px 7px; }
-.post-comments i { font-size: 16px; margin-right: 3px; }
+.post-comments i { font-size: 16px; margin-right: 6px; }
 .post-comments:hover { background: #fff; color: #333; padding-left: 4px; }
 
 .post-title { font-size: 24px; line-height: 1.3em; font-weight: 600; letter-spacing: -0.5px; margin-bottom: 0; }
